# roboomni

./: .gitignore  .gitmodules  Dockerfile  README.md
firmware/firmware/: encoder.cpp  firmware.ino  freertos_tasks.cpp  motor_control.cpp  mpu9250_sensor.cpp  ros_interface.cpp
firmware/firmware/include/: encoder.h  freertos_tasks.h  motor_control.h  mpu9250_sensor.h  ros_interface.h
src/: .repos
src/mecanum/mecanum_bringup/: CMakeLists.txt  package.xml
src/mecanum/mecanum_bringup/config/: controllers.yaml
src/mecanum/mecanum_bringup/launch/: kinect_bringup.launch.py  lidar_bringup.launch.py  ros2_control_bringup.launch.py  system_bringup.launch.py
src/mecanum/mecanum_description/: package.xml
src/mecanum/mecanum_description/launch/: display.launch.py  urdf.launch.py  view.launch.py
src/mecanum/mecanum_description/meshes/: kinect_link.STL
src/mecanum/mecanum_description/rviz/: config.rviz
src/mecanum/mecanum_description/urdf/: lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/mecanum_bringup/: CMakeLists.txt  package.xml
src/mecanum_bringup/launch/: kinect_bringup.launch.py  lidar_bringup.launch.py  micro_controller_bringup.launch.py  system_bringup.launch.py
src/mecanum_description/: CMakeLists.txt  package.xml
src/mecanum_description/meshes/: chassis_link.STL  fl_wheel_link.STL  fr_wheel_link.STL  imu_link.STL  lidar_link.STL  rl_wheel_link.STL  rr_wheel_link.STL
src/mecanum_description/rviz/: config.rviz
src/mecanum_description/urdf/: imu.xacro  kinect.xacro
